cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_338.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:300: error: DEAD_STORE
  The value written to &start (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_exp.c:300:5: Write of unused value
298.   {
299.       int i, j, bits, ret = 0, wstart, wend, window, wvalue;
300.       int start = 1;
           ^
301.       BIGNUM *d, *r;
302.       const BIGNUM *aa;
